--- a/css/style.css
+++ b/css/style.css
@@ -353,7 +353,7 @@
     }
   }
 
-  .home-slider .caption {
+  /* .home-slider .caption {
     display: flex;
     justify-content: center;
     flex-direction: column;
@@ -362,7 +362,7 @@
     height: 100%;
     color: #fff;
     cursor: e-resize;
-  }
+  } */
 
   .home-slider .item {
     background-repeat: no-repeat;
@@ -371,20 +371,20 @@
     height: 650px;
   }
   
-  .caption h3 a { color: #FFF; }
-  .caption h3 a:hover { color: #FF3; }
+  /* .caption h3 a { color: #FFF; }
+  .caption h3 a:hover { color: #FF3; } */
 
   .home-slider .item-first {
-    background-image: url(../images/slider-image1.jpg);
+    background-image: url(../images/bg.mp4);
 	background-position: center;
   }
 
   .home-slider .item-second {
-    background-image: url(../images/slider-image2.jpg);
+    background-image: url(../images/bg2.mp4);
   }
 
   .home-slider .item-third {
-    background-image: url(../images/slider-image3.jpg);
+    background-image: url(../images/bg3.mp4);
   }
 
 
