--- a/css/owl.carousel.css
+++ b/css/owl.carousel.css
@@ -45,7 +45,7 @@
     -webkit-backface-visibility: hidden;
     -webkit-tap-highlight-color: transparent;
     -webkit-touch-callout: none; }
-  .owl-carousel .owl-item img {
+  .owl-carousel .owl-item video {
     display: block;
     width: 100%; }
   .owl-carousel .owl-nav.disabled,
