--- a/css/style.css
+++ b/css/style.css
@@ -100,7 +100,7 @@
   }
 
   .overlay {
-    background: rgba(20,20,20,0.5);
+    background: rgba(5, 5, 5, 0.5);
     position: absolute;
     top: 0;
     right: 0;
@@ -1132,7 +1132,7 @@
 }
 
 .back-to-top:hover {
-  background-color: #0056b3;
+  background-color: #ffffff;
 }
 
 /* Show the button when user scrolls 300px */
