--- a/css/style.css
+++ b/css/style.css
@@ -598,7 +598,7 @@
   }
 
   .courses-price span {
-    background: #3243fe;
+    background: #3f51b5;
     border-radius: 2px;
     color: #ffffff;
     display: block;
@@ -615,7 +615,7 @@
      NEWS              
   -----------------------------------------*/
 
-  .news-thumb {
+  /* .news-thumb {
     clear: both;
     position: relative;
     overflow: hidden;
@@ -637,7 +637,7 @@
     color: #909090;
     font-weight: bold;
   }
-
+ */
 
 
   /*---------------------------------------
@@ -713,7 +713,7 @@
 }
 
 .contact .heading h2 span {
-    color: #3243fe;
+    color: #3f51b5;
 }
 
 .contact .heading p {
@@ -738,7 +738,7 @@
     padding: 10px;
     border-radius: 10px;
     font-size: 15px;
-    background: #3243fe;
+    background: #3f51b5;
     color: #ffffff;
 }
 
