--- a/css/style.css
+++ b/css/style.css
@@ -258,8 +258,8 @@
   -----------------------------------------*/
 
   .custom-navbar {
-    background: #ffffff;
-    border-top: 5px solid #5427f7;
+    background:#ffffff;
+    /* border-top: 5px solid #ffffff; */
     border-bottom: 0;
     -webkit-box-shadow: 0 1px 30px rgba(0, 0, 0, 0.1);
     -moz-box-shadow: 0 1px 30px rgba(0, 0, 0, 0.1);
@@ -270,7 +270,7 @@
   }
 
   .custom-navbar .navbar-brand {
-    color: #454545;
+    color: #000000;
     font-size: 18px;
     font-weight: bold;
     line-height: 40px;
@@ -385,15 +385,21 @@
 
   .home-slider .item-first {
     background-image:  url(../Images/bg1.png);
+    background-size: cover;
+    background-position: center;
     
   }
 
   .home-slider .item-second {
     background-image: url(../Images/bg2.png);
+    background-size: cover;
+    background-position: center;
   }
 
   .home-slider .item-third {
     background-image: url(../Images/bg3.png);
+    background-size: cover;
+    background-position: center;
   }
 
   /* .bg-img-1 {
