--- a/css/style.css
+++ b/css/style.css
@@ -382,7 +382,7 @@
   }
   
   .caption h3 a { color: #FFF; }
-  .caption h3 a:hover { color: #FF3; } 
+  .caption h3 a:hover { color: rgb(255, 22, 22) } 
 
   .home-slider .item-first {
     background-image:  url(../Images/back1.png);
@@ -816,7 +816,7 @@
   .webintern-footer .webintern-footer-inner .simple-text a {
   font-family: 'Open Sans', sans-serif;
   font-weight: 700;
-  color: #f2c21a;
+  color: #f21a1a;
   font-size: 15px;
   }
   .footer-2 {
@@ -838,7 +838,7 @@
   display: block;
   width: 30px;
   height: 2px;
-  background: #f2c21a;
+  background: rgb(255, 0, 0);
   margin-top: 15px;
   }
   .webintern-footer-list {
@@ -1295,6 +1295,27 @@ Styling for the top bar
 .view-more-btn:hover {
   background-color: #2980b9;
 }
+
+
+/*** Service ***/
+.service-item {
+  background: var(--light);
+  transition: .5s;
+}
+
+.service-item:hover {
+  margin-top: -10px;
+  background: var(--primary);
+}
+
+.service-item * {
+  transition: .5s;
+}
+
+.service-item:hover * {
+  color: var(--light) !important;
+}
+
 
 
 
