--- a/css/style.css
+++ b/css/style.css
@@ -83,7 +83,7 @@
     height: auto;
   }
 
- 
+
 ::-webkit-scrollbar-track {
   background: #f1f1f1;
 }
@@ -183,7 +183,7 @@
 
 
   /*---------------------------------------
-     BUTTONS               
+    BUTTONS               
   -----------------------------------------*/
 
   .section-btn {
@@ -205,7 +205,7 @@
 
 
   /*---------------------------------------
-       PRE LOADER              
+      PRE LOADER              
   -----------------------------------------*/
 
   .preloader {
@@ -239,8 +239,8 @@
     margin-top: -10px;
     margin-left: -10px;
     border-radius: 50%;
-    border: 1px solid #575757;
-    border-top-color: #ffffff;
+    border: 1px solid rgb(113, 5, 5);
+    border-top-color: rgb(4, 0, 106);
     animation: spinner .9s linear infinite;
   }
 
@@ -402,23 +402,6 @@
     background-size: cover;
     background-position: center;
   }
-
-  /* .bg-img-1 {
-      background-image: url(../images/1.png);
-  }
-  .bg-img-2 {
-    background-image: url(../images/2.png);
-  }
-  .bg-img-3 {
-    background-image: url(../images/3.png);
-  }
-
-  .carousel-image{
-    height: 100vh;
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: center;
-  } */
 
 
   /*---------------------------------------
@@ -618,36 +601,6 @@
   }
 
 
-
-  /*---------------------------------------
-     NEWS              
-  -----------------------------------------*/
-
-  /* .news-thumb {
-    clear: both;
-    position: relative;
-    overflow: hidden;
-    margin-bottom: 30px;
-  }
-
-  .news-thumb .news-image {
-    float: left;
-    width: 40%;
-    margin-right: 30px;
-  }
-
-  .news-info h3 {
-    margin-top: 5px;
-    margin-bottom: 10px;
-  }
-
-  .news-date span {
-    color: #909090;
-    font-weight: bold;
-  }
- */
-
-
   /*---------------------------------------
       TESTIMONIAL             
   -----------------------------------------*/
@@ -701,90 +654,6 @@
     color: #808080;
     font-size: 14px;
   }
-
-
-
-  /*---------------------------------------
-      CONTACT             
-  -----------------------------------------*/
-
-  .contact {
-    padding: 130px 0;
-}
-
-.contact .heading h2 {
-    font-size: 30px;
-    font-weight: 700;
-    margin: 0;
-    padding: 0;
-
-}
-
-.contact .heading h2 span {
-    color: #5427f7;
-}
-
-.contact .heading p {
-    font-size: 15px;
-    font-weight: 400;
-    line-height: 1.7;
-    color: #999999;
-    margin: 20px 0 60px;
-    padding: 0;
-}
-
-.contact .form-control {
-    padding: 25px;
-    font-size: 13px;
-    margin-bottom: 10px;
-    background: #f9f9f9;
-    border: 0;
-    border-radius: 10px;
-}
-
-.contact button.btn {
-    padding: 10px;
-    border-radius: 10px;
-    font-size: 15px;
-    background: #5427f7;
-    color: #ffffff;
-}
-
-.contact .title h3 {
-    font-size: 18px;
-    font-weight: 600;
-}
-
-.contact .title p {
-    font-size: 14px;
-    font-weight: 400;
-    color: #999;
-    line-height: 1.6;
-    margin: 0 0 40px;
-}
-
-.contact .content .info {
-    margin-top: 30px;
-}
-.contact .content .info i {
-    font-size: 30px;
-    padding: 0;
-    margin: 0;
-    color: #02434b;
-    margin-right: 20px;
-    text-align: center;
-    width: 20px;
-}
-.contact .content .info h4 {
-    font-size: 13px;
-    line-height: 1.4;
-}
-
-.contact .content .info h4 span {
-    font-size: 13px;
-    font-weight: 300;
-    color: #999999;
-}
 
 /*=================footer css start==============*/
 .webintern-footer {
@@ -967,7 +836,7 @@
   
 
   /*---------------------------------------
-     SOCIAL ICON              
+    SOCIAL ICON              
   -----------------------------------------*/
 
   .social-icon {
@@ -1004,7 +873,7 @@
 
 
   /*---------------------------------------
-     RESPONSIVE STYLES              
+    RESPONSIVE STYLES              
   -----------------------------------------*/
 
   @media screen and (max-width: 1170px) {
@@ -1132,101 +1001,6 @@
       height: inherit;
     }
   }
-  
-
- /* Styles for the back-to-top button */
-/* .back-to-top {
-  display: none;
-  position: fixed;
-  bottom: 20px;
-  right: 20px;
-  width: 40px;
-  height: 40px;
-  background-color: #007bff;
-  color: white;
-  text-align: center;
-  line-height: 40px;
-  font-size: 24px;
-  border-radius: 50%;
-  transition: opacity 0.3s;
-} */
-
-/* .back-to-top:hover {
-  background-color: #ffffff;
-} */
-
-/* Show the button when user scrolls 300px */
-/* @media screen and (min-height: 300px) {
-  .back-to-top {
-    display: block;
-  }
-} */
-
-/* Animation for the button appearance */
-/* .back-to-top-appear {
-  opacity: 0;
-  transform: translateY(20px);
-}
-
-.back-to-top-appear.active {
-  opacity: 1;
-  transform: translateY(0);
-  transition: opacity 0.3s, transform 0.3s;
-} */
-
-
-/* 
-Styling for the top bar
-.top-bar {
-  background-color: #c4c0c0;
-  color: rgb(0, 0, 0);
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  padding: 10px 20px;
-}
-
-.social-icons {
-  display: flex;
-  gap: 10px;
-}
-
-.contact-options a {
-  color: rgb(0, 0, 0);
-  text-decoration: none;
-  margin-right: 20px;
-} */
-
-
-
-/* Number counters */
-/* .counters {
-  display: flex;
-  flex-wrap: wrap;
-  gap: 30px;
-}
-
-.counter {
-  text-align: center;
-  background-color: #ffffff;
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-  border-radius: 5px;
-  padding: 20px;
-  width: 200px;
-}
-
-.count {
-  font-size: 36px;
-  font-weight: bold;
-  color: #007bff;
-}
-
-.label {
-  font-size: 18px;
-  color: #333;
-  margin-top: 10px;
-} */
-
 
 
 /* Our Team */
@@ -1320,7 +1094,6 @@ Styling for the top bar
 .service-item:hover * {
   color: var(--light) !important;
 }
-
 
 
 
