--- a/css/style.css
+++ b/css/style.css
@@ -214,45 +214,26 @@
     left: 0;
     width: 100%;
     height: 100%;
-    z-index: 99999;
+    background: #fff; /* Change the background color if needed */
     display: flex;
-    flex-flow: row nowrap;
     justify-content: center;
     align-items: center;
-    background: none repeat scroll 0 0 #ffffff;
-  }
+    z-index: 1000; /* Adjust the z-index based on your layout */
+}
 
-  .spinner {
-    border: 1px solid transparent;
-    border-radius: 3px;
-    position: relative;
-  }
-
-  .spinner:before {
-    content: '';
-    box-sizing: border-box;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    width: 45px;
-    height: 45px;
-    margin-top: -10px;
-    margin-left: -10px;
+.spinner {
+    border: 8px solid #f3f3f3; /* Light grey */
+    border-top: 8px solid #3498db; /* Blue */
     border-radius: 50%;
-    border: 1px solid rgb(113, 5, 5);
-    border-top-color: rgb(4, 0, 106);
-    animation: spinner .9s linear infinite;
-  }
+    width: 50px;
+    height: 50px;
+    animation: spin 1s linear infinite;
+}
 
-  @-webkit-@keyframes spinner {
-    to {transform: rotate(360deg);}
-  }
-
-  @keyframes spinner {
-    to {transform: rotate(360deg);}
-  }
-
-
+@keyframes spin {
+    0% { transform: rotate(0deg); }
+    100% { transform: rotate(360deg); }
+}
 
   /*---------------------------------------
       MENU              
@@ -413,7 +394,7 @@
   }
   
   .home-slider .item {
-      height: 50vh; /* Adjusted height for mobile screens */
+      height: 90vh; /* Adjusted height for mobile screens */
   }
 }
   /*---------------------------------------
